deployments/envoy-gateway/templates/gatewayclass.yaml
# The GatewayClass ties Gateways to the Envoy Gateway controller, and points at our
# EnvoyProxy config (LB IP + resources) via parametersRef.
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: homelab-proxy-config
    namespace: envoy-gateway-system
